[gd_scene load_steps=2 format=3 uid="uid://dt4gdti0k41mu"]

[ext_resource type="Script" path="res://addons/cognite/interface/graph_condition.gd" id="1_jeewj"]

[node name="condition" type="GraphNode"]
self_modulate = Color(0.637056, 0.484547, 1, 1)
offset_left = 801.0
offset_top = 348.0
offset_right = 994.0
offset_bottom = 494.0
mouse_filter = 1
title = "Condition"
position_offset = Vector2(801, 348)
show_close = true
slot/0/left_enabled = true
slot/0/left_type = 99
slot/0/left_color = Color(0.533333, 0.207843, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 99
slot/0/right_color = Color(0.533333, 0.207843, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = true
slot/1/left_type = 99
slot/1/left_color = Color(0.533333, 0.207843, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = true
slot/3/left_type = 99
slot/3/left_color = Color(0.533333, 0.207843, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("1_jeewj")

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "assignment"
horizontal_alignment = 1

[node name="A" type="LineEdit" parent="."]
layout_mode = 2
placeholder_text = "Number or array"
flat = true
caret_mid_grapheme = false

[node name="condition" type="OptionButton" parent="."]
layout_mode = 2
focus_mode = 0
flat = true
item_count = 4
selected = 0
popup/item_0/text = "condition"
popup/item_0/id = 0
popup/item_0/separator = true
popup/item_1/text = "is greater than"
popup/item_1/id = 1
popup/item_2/text = "is less than"
popup/item_2/id = 2
popup/item_3/text = "is equals than"
popup/item_3/id = 3

[node name="B" type="LineEdit" parent="."]
layout_mode = 2
placeholder_text = "Number or array"
flat = true
caret_mid_grapheme = false

[connection signal="text_changed" from="A" to="." method="_on_a_text_changed"]
[connection signal="item_selected" from="condition" to="." method="_on_condition_item_selected"]
[connection signal="text_changed" from="B" to="." method="_on_b_text_changed"]
